--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "transpile": "babel src -d lib",
     "browserify": "browserify ./src/index.js --outfile ./bin/index.js -g uglifyify -t babelify -s locize",
     "copy": "cp ./bin/index.js ./locize.min.js",
-    "build": "npm run transpile && npm run browserify && npm run copy && git commit -a -m 'updated build output'",
+    "build": "npm run transpile && npm run browserify && npm run copy",
     "version": "npm run build",
     "postversion": "git push && git push --tags"
   },
