--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "locize",
-  "version": "1.0.0",
+  "version": "0.4.0",
   "description": "locize service",
-  "main": "dist/commonjs/index.js",
+  "main": "./index.js",
   "jsnext:main": "dist/es/index.js",
+  "module": "dist/es/index.js",
   "keywords": [
     "locize",
     "i18next-service",
@@ -17,32 +18,29 @@
     "url": "git://github.com/locize/locize.git"
   },
   "dependencies": {
-    "i18next": "3.4.1",
-    "i18next-browser-languagedetector": "0.3.0",
-    "i18next-locize-backend": "0.2.0"
+    "i18next": "4.1.0",
+    "i18next-browser-languagedetector": "1.0.1",
+    "i18next-locize-backend": "1.0.0"
   },
   "devDependencies": {
-    "aws-sdk": "2.4.7",
-    "babel-cli": "6.10.1",
-    "babel-core": "6.10.4",
-    "babel-eslint": "6.1.2",
-    "babel-preset-es2015-native-modules": "6.6.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-es2015-rollup": "1.1.1",
-    "babel-preset-stage-0": "6.5.0",
-    "eslint": "3.0.1",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.10.3",
-    "eslint-plugin-jsx-a11y": "2.0.1",
-    "eslint-plugin-react": "5.2.2",
+    "aws-sdk": "2.7.7",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.18.2",
+    "babel-eslint": "7.1.1",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-stage-0": "6.16.0",
+    "eslint": "3.10.2",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.1",
     "mkdirp": "0.5.1",
-    "rimraf": "2.5.3",
-    "rollup": "0.34.1",
+    "rimraf": "2.5.4",
+    "rollup": "0.36.3",
     "rollup-plugin-babel": "2.6.1",
-    "rollup-plugin-commonjs": "3.1.0",
-    "rollup-plugin-node-resolve": "1.7.1",
+    "rollup-plugin-commonjs": "5.0.5",
+    "rollup-plugin-node-resolve": "2.0.0",
     "rollup-plugin-uglify": "1.0.1",
-    "yargs": "4.8.0"
+    "yargs": "6.4.0"
   },
   "scripts": {
     "clean": "rimraf dist && mkdirp dist",
@@ -50,7 +48,7 @@
     "build:es": "BABEL_ENV=jsnext babel src --out-dir dist/es",
     "build:cjs": "babel src --out-dir dist/commonjs",
     "build:umd": "rollup -c rollup.config.js --format umd && rollup -c rollup.config.js --format umd --uglify",
-    "build:amd": "rollup -c rollup.config.js --format amd && rollup -c rollup.config.js --format umd --uglify",
+    "build:amd": "rollup -c rollup.config.js --format amd && rollup -c rollup.config.js --format amd --uglify",
     "build:iife": "rollup -c rollup.config.js --format iife && rollup -c rollup.config.js --format iife --uglify",
     "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:umd && npm run copy",
     "preversion": "npm run build && git push",
