--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "locize",
   "version": "1.2.0",
-  "description": "locize service",
-  "main": "./index.js",
-  "jsnext:main": "dist/es/index.js",
-  "module": "dist/es/index.js",
-  "browser": "locize.min.js",
+  "description": "locize incontext editor binding",
+  "main": "./dist/cjs/locize.js",
+  "module": "./dist/esm/locize.js",
   "keywords": [
     "locize",
     "i18next-service",
@@ -18,44 +16,30 @@
     "type": "git",
     "url": "git://github.com/locize/locize.git"
   },
-  "dependencies": {
-    "i18next": "7.0.1",
-    "i18next-browser-languagedetector": "1.0.1",
-    "i18next-locize-backend": "1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "aws-sdk": "2.16.0",
-    "babel-cli": "6.23.0",
-    "babel-core": "6.23.1",
-    "babel-eslint": "7.1.1",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-stage-0": "6.22.0",
-    "eslint": "3.16.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "mkdirp": "0.5.1",
-    "rimraf": "2.6.0",
-    "rollup": "0.41.4",
-    "rollup-plugin-babel": "2.7.1",
-    "rollup-plugin-commonjs": "7.0.0",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-uglify": "1.0.1",
-    "yargs": "6.6.0"
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "babel-eslint": "^10.1.0",
+    "cpy-cli": "^3.1.1",
+    "escope": "^3.6.0",
+    "eslint": "7.9.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.0",
+    "rimraf": "3.0.2",
+    "rollup": "^2.28.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
-    "clean": "rimraf dist && mkdirp dist",
-    "copy": "cp ./dist/umd/locize.min.js ./locize.min.js && cp ./dist/umd/locize.js ./locize.js",
-    "build:es": "BABEL_ENV=jsnext babel src --out-dir dist/es",
-    "build:cjs": "babel src --out-dir dist/commonjs",
-    "build:umd": "rollup -c rollup.config.js --format umd && rollup -c rollup.config.js --format umd --uglify",
-    "build:amd": "rollup -c rollup.config.js --format amd && rollup -c rollup.config.js --format amd --uglify",
-    "build:iife": "rollup -c rollup.config.js --format iife && rollup -c rollup.config.js --format iife --uglify",
-    "build": "npm run clean && npm run build:cjs && npm run build:es && npm run build:umd && npm run copy",
+    "lint": "eslint ./src/*",
+    "build": "rimraf dist && rollup -c && cpy \"./dist/umd/*.js\" ./",
     "preversion": "npm run build && git push",
-    "postversion": "git push && git push --tags",
-    "deploy": "node deployment/upload.js",
-    "deploy_prod": "DEPLOY_TYPE=prod node deployment/upload.js"
+    "postversion": "git push && git push --tags"
   },
   "author": "Jan Mühlemann <jan.muehlemann@gmail.com> (https://github.com/jamuhl)",
   "license": "MIT"
