--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "babel-eslint": "^10.1.0",
-    "cpy-cli": "^3.1.1",
+    "cpy-cli": "^4.1.0",
     "escope": "^3.6.0",
     "eslint": "7.13.0",
     "eslint-config-airbnb": "18.2.1",
@@ -30,12 +30,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "rimraf": "3.0.2",
-    "rollup": "^2.33.3",
+    "rollup": "^2.75.7",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2"
   },
   "scripts": {
+    "test": "npm run lint",
     "lint": "eslint ./src/*",
     "build": "rimraf dist && rollup -c && cpy \"./dist/umd/*.js\" ./",
     "preversion": "npm run build && git push",
