--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "locize incontext editor binding",
   "main": "./dist/cjs/locize.js",
   "module": "./dist/esm/locize.js",
+  "types": "./index.d.ts",
   "keywords": [
     "locize",
     "i18next-service",
@@ -18,30 +19,42 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
+    "@babel/core": "^7.22.1",
+    "@babel/plugin-transform-runtime": "^7.22.4",
+    "@babel/preset-env": "^7.22.4",
+    "@types/mocha": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "babel-eslint": "^10.1.0",
-    "cpy-cli": "^4.1.0",
-    "escope": "^3.6.0",
+    "cpy-cli": "^4.2.0",
+    "escope": "^4.0.0",
     "eslint": "7.13.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "rimraf": "3.0.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "rimraf": "5.0.1",
     "rollup": "^2.75.7",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "tsd": "^0.28.1",
+    "typescript": "^5.0.4"
   },
   "scripts": {
+    "lint:javascript": "eslint ./src/*",
+    "lint:typescript": "eslint -c .ts.eslintrc *.d.ts test/types/**/*.test-d.ts",
+    "lint": "npm run lint:javascript && npm run lint:typescript",
     "test": "npm run lint",
-    "lint": "eslint ./src/*",
+    "test:typescript": "tsd",
+    "test:all": "npm run test && npm run test:typescript",
     "build": "rimraf dist && rollup -c && cpy \"./dist/umd/*.js\" ./",
     "preversion": "npm run build && git push",
     "postversion": "git push && git push --tags"
   },
   "author": "Jan Mühlemann <jan.muehlemann@gmail.com> (https://github.com/jamuhl)",
-  "license": "MIT"
+  "license": "MIT",
+  "tsd": {
+    "directory": "test/types"
+  }
 }
