This module can now be used for both type of incontext editors - as iframe (old) or with iframe (new).

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,12 @@
-test/
-src/
-coverage/
-.babelrc
-.editorconfig
-.eslintignore
+.DS_Store
 .eslintrc
 .gitignore
-.ts.eslintrc
-bower.json
-gulpfile.js
-karma.conf.js
+.npmignore
+.editorconfig
+.vscode
+README.md
+.eslintignore
+test
+scripts
+examples
+debuggingApps
